[project]
name = "interferometer-locking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "pyfirmata2>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
